Fixed minor spacing and css issues on state map chart

--- a/src/common.scss
+++ b/src/common.scss
@@ -344,7 +344,7 @@ button {
   }
 }
 
-@media (max-width: 1400px) {
+@media (max-width: 1280px) {
   .fs-lg-28 {
     font-size: 28px !important;
   }
